hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_varray.php.exp
File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 34-33:
An arrow ('=>') is expected here. (Parsing[1002])
